[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/status_icons/attack_status_icon.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/status_icons/status_counter_icon.png" type="Texture" id=2]
[ext_resource path="res://component_scenes/status/status.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "out"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1.7411, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ) ]
}

[node name="Status" type="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 33.0
margin_bottom = 16.0
custom_constants/separation = 1
script = ExtResource( 3 )

[node name="StatusIcon" type="TextureRect" parent="."]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="StatusCounter" type="Control" parent="."]
margin_left = 17.0
margin_right = 33.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
rect_clip_content = true

[node name="Sprite" type="Sprite" parent="StatusCounter"]
position = Vector2( 8, 8 )
texture = ExtResource( 2 )
hframes = 10

[node name="InOutAnimationPlayer" type="AnimationPlayer" parent="."]
anims/in = SubResource( 1 )
anims/out = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]
